# opencode-configger

./: .gitignore  DESIGN.md  pyproject.toml  requirements.txt
app/: __init__.py  architecture_graph.py  config_export.py  config_import.py  config_io.py  config_schema.py  diff_engine.py  history.py  main.py  migration.py  model_loader.py  template.py  widgets.py
app/dialogs/: __init__.py  file_picker.py
app/scanners/: __init__.py  mcp_scanner.py  plugin_scanner.py
app/tabs/: __init__.py  agents.py  architecture.py  commands.py  compaction.py  extensions.py  formatters.py  general.py  lsp.py  mcp.py  models.py  providers.py  server.py  templates.py  tools.py  tui.py
app/templates/builtin/: datascience.jsonc  devops.jsonc  fullstack.jsonc  minimal.jsonc  python_dev.jsonc
conductor/: index.md  lessons-learned.md  tech-debt.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/config_import_export_20260423/: metadata.json
conductor/archive/config_versioning_migration_20260408/: plan.md
conductor/tracks/mvp_20260328/: plan.md  (+2 more)
measure/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
tests/: test_architecture_graph.py  test_architecture_tab.py  test_config_export.py  test_config_import.py  test_config_io.py  test_config_schema.py  test_diff_engine.py  test_dynamic_tabs.py  test_enhanced_model_explorer.py  test_extensions_tab.py  test_history.py  test_history_panel.py  test_migration.py  test_model_loader.py  test_scanners.py  test_static_tabs.py  test_template.py  test_templates_tab.py  test_tui_and_models_tabs.py  test_widgets.py
(+63 files in other folders)
